--- a/summary/sections/main_part/reductions/small_lcs/nvg_figure.tex
+++ b/summary/sections/main_part/reductions/small_lcs/nvg_figure.tex
@@ -135,7 +135,7 @@
 \draw[good edge] (a_dummy.south) edge node[fill=white] {$\rho_0$} (b_dummy.north);
 
 \end{tikzpicture}
-        \caption{First subfigure}
+        \caption{\lcs{} visualization when $\langle a_i, b_j \rangle = 0$.}
         \label{fig:nvg:ortho}
     \end{subfigure}
     \hfill
@@ -189,10 +189,10 @@
 
 
 \end{tikzpicture}
-        \caption{Second subfigure}
+        \caption{\lcs{} visualization when $\langle a_i, b_j \rangle \neq 0$.}
         \label{fig:nvg:non-ortho}
     \end{subfigure}
-    \caption{Visualization of the normalized vector gadget.}
+    \caption{This figure shows the general idea of a normalized vector gadget. $S$ is hereby the normalization part that lower bounds the \lcs{} value for the case that the vectors are not orthogonal. Hence, the \lcs{} length remains the same no matter if they are just in one coordinate or all of them non-orthogonal.}
     \label{fig:nvg}
 
 \end{figure}
