--- a/summary/sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-non_ortho-upper_bound.tex
+++ b/summary/sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-non_ortho-upper_bound.tex
@@ -15,53 +15,52 @@ Note that every $x_i$ is assigned to at most one $y_j$.
 We say that $y_j$ is $k$-aligned if $k$ different $x_i$s are aligned with it.
 %For the following, we define $H(w) := 1^{\gamma_2}(01)^{\gamma_3}w1^{\gamma_3}$.
 %
-It is possible to show the following bounds:
+It is possible to show the following bounds\footnote{For a proof, we refer to the proof for the second inequality of Lemma 9.6 in \cite{Bringman.2018}}:%
+\todo{Comment: Before I gave and intuition for $0$-aligned $y_j$, but because size constraints I removed it. Is that okay?}
 \begin{align*}
 	\text{if $y_j$ is $0$-aligned:}&& L(z_j, \gLargeLCS{y_j}) &\leq \gamma_1 + \gamma_3 + \ell_y =: L_0 \\
 	\text{if $y_j$ is $1$-aligned:}&& L(z_j, \gLargeLCS{y_j}) &\leq \Gamma + L(x_i, y_j) = \Gamma + \rho_1 =: L_1 \\
 	\text{if $y_j$ is $k$-aligned for $k>2$:}&& L(z_j, \gLargeLCS{y_j}) &\leq |\gLargeLCS{y_j}| = \Gamma + \ell_y =: L_k
 \end{align*}
-We will not prove them here but refer to the original paper \cite[Lemma 9.6\footnote{Lemma 9.6 combines this and the following lemma in this summary. The proof of the claim is in the proof for the second inequality of Lemma 9.6.}]{Bringman.2018}.
-\footnote{Comment for proof reading: Before I gave the following intuition for $0$-aligned $y_j$, but because size constraints I removed it:
-But to give an intuition observe, that $y_1$ is chosen so big, that it is always optimal to match the full $0^{\gamma_1}$ block.
-This match also stretches over $H(x_i)$.
-The remainder $H(y_j)$ then can only match with remaining zeroes in the right $0^{\frac{\gamma_1}{2}}$ block.
-With $\numSymbols{0}{H(y_j)} \leq y_3 + \ell_y$ we obtain the bound.}
+%\footnote{
+%But to give an intuition observe, that $y_1$ is chosen so big, that it is always optimal to match the full $0^{\gamma_1}$ block.
+%This match also stretches over $H(x_i)$.
+%The remainder $H(y_j)$ then can only match with remaining zeroes in the right $0^{\frac{\gamma_1}{2}}$ block.
+%With $\numSymbols{0}{H(y_j)} \leq y_3 + \ell_y$ we obtain the bound.} for it.}
 
 
 Let now $n_0$, $n_1$ and $n_k$ be the number of $0$-, $1$- and $k$-aligned $y_j$ ($k \geq 2$).
 With the previous bounds, we obtain
 \begin{equation}
 \label{eq:1-2vs1:non-ortho-upper-bound:eq-ns}
-	L(x,y) = \sum_{j=1}^Q L(z_j, \gLargeLCS{y_j} \leq n_0 L_0 + n_1 L_1 + n_k L_k 
+	L(x,y) = \sum_{j=1}^Q L(z_j, \gLargeLCS{y_j} \leq n_0 L_0 + n_1 L_1 + n_k L_k .
 \end{equation}
 It remains to bound this by $Q\Gamma + (Q-N)\ell_y + N\rho_1$. 
-For this we show the following claim.
+We show the following claim.
 \begin{claim}
 Setting $n_0 = \hat{n}_0 := 0$, $n_1 = \hat{n}_1 := N$ and $n_k = \hat{n}_k := (Q-N)$ maximizes
 \[
-\mathcal{L}(n_0, n_1, n_k) := n_0 L_0 + n_1 L_1 + n_k L_k
+\mathcal{L}(n_0, n_1, n_k) := n_0 L_0 + n_1 L_1 + n_k L_k,
 \]
-under the assumptions $n_0 + n_1 + n_k = Q$ and $2n_k + n_1 \leq P = 2Q - N$.
+under the assumptions $n_0 + n_1 + n_k = Q$ (A1) and $2n_k + n_1 \leq P = 2Q - N$ (A2).
 \end{claim}
-The assumptions are because every $y_j$ has exactly one alignment category and every $k$-aligned $y_j$ is aligned with $k$ unique $x_i$s respectively.
-Observe first that the claimed values satisfy the assumptions.
-Now assume $n_0 > 0$ would maximize $\mathcal{L}(n_0, n_1, n_k)$ for any $n_1$ and $n_k$.
-If we define $n'_0 := n_0 - 1$, $n'_1 := n_1 + 2$ and $n'_k := n_k - 1$, we have
+The assumptions are because every $y_j$ has exactly one alignment category and every $k$-aligned $y_j$ has $k$ unique $x_i$s.
+%Observe first that the claimed values satisfy the assumptions.
+Assume $n_0 > 0$ would maximize $\mathcal{L}(n_0, n_1, n_k)$ for some $n_1$ and $n_k$.
+If we define $n'_0 := n_0 - 1$, $n'_1 := n_1 + 2$ and $n'_k := n_k - 1$, we still satisfy (A1) and (A2) and have
 \[
 	\mathcal{L}(n'_0, n'_1, n'_k) = \mathcal{L}(n_0, n_1, n_k) + 2L_1 - L_0 - L_k > \mathcal{L}(n_0, n_1, n_k),
 \]
 as $L_0 + L_k = \Gamma + \gamma_1 + \gamma_3 + 2\ell_y < \Gamma + \gamma_1 + \gamma_2 + \gamma_3 < 2\Gamma \leq 2L_1$.
 That is a contradiction, hence, $\hat{n}_0 = 0$.
-Now we obtain from the first assumption $n_1 \leq Q - n_k$.
-Putting this into the second assumption, we get
+Now we obtain from (A1) $n_1 \leq Q - n_k$.
+Putting this into (A2), we get
 \begin{align*}
 2n_k + Q - n_k &\leq 2Q - N %
 &\Leftrightarrow& %
 &n_k \leq Q - N.
 \end{align*}
-Hence, $\mathcal{L}(n_0, n_1, n_k)$ is maximized for $n_k = Q-N$, because $L_k \geq L_1 \geq 0$. 
-The claim follows.
+Because $L_k \geq L_1 \geq 0$, setting $n_k = Q-N$ maximizes $\mathcal{L}(n_0, n_1, n_k)$ and the claim follows.
 %
 %
 To finalize our full proof, we can further bound \autoref{eq:1-2vs1:non-ortho-upper-bound:eq-ns} by
