--- a/summary/sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-ortho-lower_bound.tex
+++ b/summary/sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-ortho-lower_bound.tex
@@ -1,3 +1,5 @@
+Now we can start with the case if one $L(x_i, y_j) = \rho_0$, i.e., the vectors are orthogonal.
+
 \begin{lemma}
 \label{lem:1-2vs1:ortho-lower-bound}
 If there are $N < j \leq Q-N$ and $\lambda \in \indexSet{N}$ s.t. $L(x_{2j-\lambda}, y_j) = \rho_0$, we have
@@ -11,33 +13,32 @@ We define $i := 2j - \lambda$, i.e., $L(x_i, y_j) = \rho_0$.
 Assume such $j$ and $\lambda$ exist.
 We split the strings $x$ and $y$ into the three parts
 \begin{align*}
-x = \lLCSGadget{x_1, \ldots, x_P} &= \lLCSGadget{x^L_1, \ldots, x^L_{P'}} \lLCSGadget{x^M_1, \ldots, x^M_N} \lLCSGadget{x^R_1, \ldots, x^R_{P''}} =: \lLCSGadgetName^L_x\lLCSGadgetName^M_x\lLCSGadgetName^R_x \quad\text{and}\\
-y = \lLCSGadget{y_1, \ldots, y_Q} &= \lLCSGadget{y^L_1, \ldots, y^L_{Q'}} \lLCSGadget{y^M_1, \ldots, y^M_N} \lLCSGadget{y^R_1, \ldots, y^R_{Q''}} =: \lLCSGadgetName^L_y\lLCSGadgetName^M_y\lLCSGadgetName^R_y,
+x = \lLCSGadget{x_1, \ldots, x_P} &= \lLCSGadget{x^L_1, \ldots, x^L_{P_L}} \lLCSGadget{x^M_1, \ldots, x^M_N} \lLCSGadget{x^R_1, \ldots, x^R_{P_R}} =: \lLCSGadgetName^L_x\lLCSGadgetName^M_x\lLCSGadgetName^R_x \quad\text{and}\\
+y = \lLCSGadget{y_1, \ldots, y_Q} &= \lLCSGadget{y^L_1, \ldots, y^L_{Q_L}} \lLCSGadget{y^M_1, \ldots, y^M_N} \lLCSGadget{y^R_1, \ldots, y^R_{Q_R}} =: \lLCSGadgetName^L_y\lLCSGadgetName^M_y\lLCSGadgetName^R_y,
 \end{align*}
-where $Q' = j - \lambda$, $P' = 2(j - \lambda)$, $Q'' = Q - Q' - N$ and $P'' = P - P' - N$.
+where $Q_L = j - \lambda$, $P_L = 2(j - \lambda)$, $Q_R = Q - Q_L - N$ and $P_R = P - P_L - N$.
 We now want to lower bound the three parts. %$L^L := L(\lLCSGadgetName^L_x, \lLCSGadgetName^L_y)$, $L^M := L(\lLCSGadgetName^M_x, \lLCSGadgetName^M_y)$ and $L^R := L(\lLCSGadgetName^R_x, \lLCSGadgetName^R_y)$.
-For the left and right part, note that $P' = 2Q'$ and $P'' = 2Q''$, hence we can apply \autoref{lem:1-2vs1-gadget-edge-cases} (\ref{lem:1-2vs1-gadget-edge-cases:P=2Q}) to have
+For the left and right part, note that $P_L = 2Q_L$ and $P_R = 2Q_R$, hence we can apply \autoref{lem:1-2vs1-gadget-edge-cases} (\ref{lem:1-2vs1-gadget-edge-cases:P=2Q}) to obtain
 \begin{align*}
-L(\lLCSGadgetName^L_x, \lLCSGadgetName^L_y) &\geq Q'(\Gamma + \ell_y) \\
-L(\lLCSGadgetName^R_x, \lLCSGadgetName^R_y) &\geq Q''(\Gamma + \ell_y) = (Q - Q' - N)(\Gamma + \ell_y).
+L(\lLCSGadgetName^L_x, \lLCSGadgetName^L_y) &\geq Q_L(\Gamma + \ell_y) \\
+L(\lLCSGadgetName^R_x, \lLCSGadgetName^R_y) &\geq Q_R(\Gamma + \ell_y) = (Q - Q_L - N)(\Gamma + \ell_y).
 \end{align*}
-For the middle part, we first show that $x_i$ and $y_j$ are in the middle part, i.e., $x_i = x^M_{i'}$ and $y_j = y^M_{j'}$ for some $i', j' \in \indexSet{N}$.
+For the middle part, we first show that $x_i$ and $y_j$ are actual in the middle part, i.e., $x_i = x^M_{i'}$ and $y_j = y^M_{j'}$ for some $i', j' \in \indexSet{N}$.
 Note therefore that
 \begin{align*}
-P' = 2j - 2\lambda &<& &2j - \lambda = i& &\leq 2j - \lambda - \lambda + N = P' + N \quad\text{and}\\
-Q' = j - \lambda &<& &j& &\leq j - \lambda + N = Q' + N,
+P_L = 2j - 2\lambda &<& &2j - \lambda = i& &\leq 2j - \lambda - \lambda + N = P_L + N \quad\text{and}\\
+Q_L = j - \lambda &<& &j& &\leq j - \lambda + N = Q_L + N,
 \end{align*}
 where we used $1 \leq \lambda \leq N$.
-Now we can apply \autoref{lem:1-2vs1-gadget-edge-cases} (\ref{lem:1-2vs1-gadget-edge-cases:P=Q}) with $P=Q=N$ and use the fact that $L(x^M_{i'}, y^M_{j'}) = L(x_i, y_j) = \rho_0$ to bound
+Now we can apply \autoref{lem:1-2vs1-gadget-edge-cases} (\ref{lem:1-2vs1-gadget-edge-cases:P=Q}) with $P=Q=N$ and use that $L(x^M_{i'}, y^M_{j'}) = L(x_i, y_j) = \rho_0$ and $L(x^M_k, y^M_k) \geq \rho_1$ for all $k \in \indexSet{N}$ to bound
 \[
-L(\lLCSGadgetName^M_x, \lLCSGadgetName^M_y) \geq N\Gamma + \sum_{k=1}^N L(x^M_k, y^M_k) \geq N\Gamma + (N-1)\rho_1 + \rho_0,
+L(\lLCSGadgetName^M_x, \lLCSGadgetName^M_y) \geq N\Gamma + \sum_{k=1}^N L(x^M_k, y^M_k) \geq N\Gamma + (N-1)\rho_1 + \rho_0.
 \]
-where we used that $L(x^M_k, y^M_k) \geq \rho_1$ for all $k \in \indexSet{N}$.
-Finally, we obtain
+Finally, we combine the results and obtain the desired bound
 \begin{align*}
 L(x,y) &\geq L(\lLCSGadgetName^L_x, \lLCSGadgetName^L_y) + L(\lLCSGadgetName^M_x, \lLCSGadgetName^M_y) + L(\lLCSGadgetName^R_x, \lLCSGadgetName^R_y)\\
-	&\geq Q'(\Gamma + \ell_y) + N\Gamma + (N-1)\rho_1 + \rho_0 + (Q - Q' - N)(\Gamma + \ell_y) \\
-	&= Q\Gamma + (Q-N)\ell_y + (N-1)\rho_1 + \rho_0,
+	&\geq Q_L(\Gamma + \ell_y) + N\Gamma + (N-1)\rho_1 + \rho_0 + (Q - Q_L - N)(\Gamma + \ell_y) \\
+	&= Q\Gamma + (Q-N)\ell_y + (N-1)\rho_1 + \rho_0.
 \end{align*}
-which is the desired bound.
+We can now continue with the case that $L(x_i, y_j) = \rho_1$ for all $i, j$.
 \end{proof}
